--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "author": "",
   "description": "A - Z",
+  "dependencies": {
+    "youtube-iframe-player": "^1.0.0"
+  },
   "devDependencies": {
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
