gestures using the more robust hammerjs

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "author": "",
   "description": "A - Z",
   "dependencies": {
+    "hammerjs": "^2.0.8",
     "youtube-iframe-player": "^1.0.0"
   },
   "devDependencies": {
