--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
-    "grunt-bump": "^0.3.0",
-    "grunt": "^0.4.5",
+    "grunt": "^1.1.0",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-text-replace": "^0.4.0",
-    "grunt-sftp-deploy": "^0.2.2"
+    "grunt-contrib-watch": "^1.1.0"
   },
   "license": "ISC",
   "name": "armydotmil",
