--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "description": "A - Z",
   "dependencies": {
     "hammerjs": "^2.0.8",
-    "youtube-iframe-player": "^1.0.0",
-    "quill": "^1.3.7"
+    "quill": "^1.3.7",
+    "youtube-iframe-player": "^1.0.0"
   },
   "devDependencies": {
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "grunt": "^1.1.0",
-    "grunt-browserify": "^5.0.0",
+    "grunt-browserify": "^6.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.1.0"
