--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "youtube-iframe-player": "^1.0.0"
   },
   "devDependencies": {
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
+    "@babel/preset-env": "^7.16.11",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babelify": "^10.0.0",
     "grunt": "^1.1.0",
     "grunt-browserify": "^6.0.0",
     "grunt-contrib-sass": "^1.0.0",
