update header styles and new logo

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ _site
 node_modules
 _js/bundled/
 .DS_Store
+e2/downloads
+e2/fonts
+e2/js
+e2/c
+e2/css/rv7/*
+!e2/css/rv7/armydotmil
+!e2/css/rv7/upgrade
+e2/images/rv7/*
+!e2/images/rv7/armydotmil
+!e2/images/rv7/upgrade
